--- a/css/index.css
+++ b/css/index.css
@@ -9,12 +9,13 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    padding: 15px;
 }
+
 
 .left h1 {
     margin: 0; /* Remove default margin for h1 */
-    color: #fff; /* Set heading color to white */
+    color: #a7f3d0; /* Set heading color to white */
 }
 
 .right {
@@ -36,7 +37,7 @@ body {
     border-radius: 15px 0 15px 0;
     border: none;
     color: white;
-    padding: 10px 20px;
+    padding: 6px 12px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -50,13 +51,14 @@ body {
     border-radius: 15px 0 15px 0;
     border: none;
     color: white;
-    padding: 10px 20px;
+    padding: 6px 12px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
     margin-left: 10px;
     cursor: pointer;
+    border-color: 4px, solid, white;
 }
 
 .resume-link:hover {
