--- a/css/index.css
+++ b/css/index.css
@@ -15,14 +15,14 @@ body {
 
 .headerName {
     margin: 0;
-    font-size: 1.5em; /* Adjust font size */
+    font-size: 1.5em; 
     color: #a7f3d0;
 }
 
 .social-links a {
     margin-right: 10px;
     text-decoration: none;
-    font-size: 1.5em; /* Adjust font size */
+    font-size: 1.5em; 
     color: #fff;
 }
 
@@ -36,7 +36,7 @@ body {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 1em; /* Adjust font size */
+    font-size: 1em; 
     margin-left: 10px;
     cursor: pointer;
 }
@@ -50,7 +50,7 @@ body {
     display: flex;
     align-items: flex-start; /* Align items at the start of the cross axis (top) */
     padding: 20px;
-    height: 80vh /* Set height to screen height minus double the header padding */
+    height: 80vh /*height of content section*/
 }
 
 .left {
