--- a/css/index.css
+++ b/css/index.css
@@ -212,11 +212,11 @@ body {
 /* Add this to your existing CSS */
 
 /* Add this to your existing CSS */
-
 .prj-box {
     perspective: 1000px;
     transform-style: preserve-3d;
     transition: transform 0.5s;
+    cursor: pointer;
 }
 
 .prj-box:hover {
@@ -250,4 +250,48 @@ body {
 
 .prj-box.active .full-description {
     display: block;
+}
+/* Add this to your existing CSS */
+.prj-box.flip-box {
+    perspective: 1000px;
+    transform-style: preserve-3d;
+    transition: transform 0.5s;
+    cursor: pointer;
+}
+
+.prj-box.flip-box:hover {
+    transform: rotateY(180deg);
+}
+
+.prj-box.flip-box .flip-box-inner {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 0.6s;
+}
+
+.prj-box.flip-box:hover .flip-box-inner {
+    transform: rotateY(180deg);
+}
+
+.prj-box.flip-box .flip-box-front,
+.prj-box.flip-box .flip-box-back {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden;
+}
+
+.prj-box.flip-box .flip-box-front {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.prj-box.flip-box .flip-box-back {
+    transform: rotateY(180deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
