added blog logo

--- a/css/index.css
+++ b/css/index.css
@@ -46,6 +46,14 @@ body {
     background-color: #45a049;
 }
 
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+
 /* Section Styles */
 .content {
     display: flex;
