--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@ link[rel="icon"] {
 body {
     margin: 0;
     font-family: 'Consolas', monospace;
-    background-color: #27272a;
+    background-color: #29353a;
     color: #a7f3d0;
     height: 100%;
 }
@@ -523,3 +523,39 @@ body {
   .walkthrough .screens .screen.active .media.comm .status-badge {
     transition-delay: 1.6s;
   }
+
+
+/* github */
+#github-repos {
+  margin: 5vh 2vh;
+  height: 90vh;
+  border: 1px solid #ddd;
+  text-align: center;
+  position: relative;
+}
+
+.carousel-container {
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Updated to center horizontally and vertically */
+  height: 100%;
+  overflow: hidden; /* Added to hide overflowing content */
+}
+
+.carousel {
+  width: 50%;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  transform: translateX(-50%) translateY(-50%); /* Updated for centering */
+  transition: transform 0.5s, opacity 0.5s;
+  text-align: center;
+}
+
+.carousel.active {
+  opacity: 1;
+  transform: translateX(0) translateY(0); /* Updated for centering */
+}
+
