--- a/css/index.css
+++ b/css/index.css
@@ -536,26 +536,61 @@ body {
 
 .carousel-container {
   display: flex;
+  background-color: #010409;
   align-items: center;
-  justify-content: center; /* Updated to center horizontally and vertically */
+  justify-content: center;
   height: 100%;
-  overflow: hidden; /* Added to hide overflowing content */
+  overflow: hidden;
+  position: relative; /* Added for positioning */
 }
 
 .carousel {
-  width: 50%;
+  width: 30%;
+  height: 60%;
   padding: 20px;
   border: 1px solid #ddd;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  opacity: 0;
-  transform: translateX(-50%) translateY(-50%); /* Updated for centering */
-  transition: transform 0.5s, opacity 0.5s;
+  background-color: #0d1117;
+  opacity: 0;;
+  position: absolute; /* Updated for positioning */
+  left: 50%; /* Updated for centering */
+  transform: translateX(-50%); /* Updated for centering */
+  transition: transform 1s ease, opacity 0.5s ease;
   text-align: center;
 }
 
 .carousel.active {
   opacity: 1;
-  transform: translateX(0) translateY(0); /* Updated for centering */
 }
+
+.controls {
+  position: absolute; /* Added for positioning */
+  width: 50%; /* Added for full-width controls */
+  left: 25%;
+  display: flex;
+  justify-content: space-between;
+  top: 50%; /* Added for centering */
+  transform: translateY(-50%); /* Added for centering */
+}
+
+#prevBtn,
+#nextBtn {
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+#prevBtn {
+  order: 1; /* Added for correct order */
+}
+
+#nextBtn {
+  order: 2; /* Added for correct order */
+}
+
 
