--- a/css/index.css
+++ b/css/index.css
@@ -524,7 +524,6 @@ body {
     transition-delay: 1.6s;
   }
 
-
 /* github */
 #github-repos {
   margin: 5vh 2vh;
@@ -552,7 +551,7 @@ body {
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   background-color: #0d1117;
-  opacity: 0;;
+  opacity: 0;
   position: absolute; /* Updated for positioning */
   left: 50%; /* Updated for centering */
   transform: translateX(-50%); /* Updated for centering */
@@ -593,4 +592,11 @@ body {
   order: 2; /* Added for correct order */
 }
 
-
+.carousel-container .heading {
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: white;
+  font-size: 30px;
+}
