github pages changes

--- a/css/index.css
+++ b/css/index.css
@@ -600,9 +600,15 @@ body {
   transform: translateX(-50%);
   font-size: 30px;
 }
-.carousel a{
+.carousel span a{
   
   /* text-decoration: none; */
   font-size: 1.5em;
   color: #fff;
+  text-decoration: none;
+  /* justify-content:space-around; */
+ 
+  display: inline-block;
+  text-align: left;
+  /* align-items: center; */
 }
