--- a/css/index.css
+++ b/css/index.css
@@ -640,3 +640,33 @@ body {
     font-size: medium;
     background-color: #010409;
 }
+
+/* Add your styles here */
+.hidden {
+  display: none;
+}
+
+.contact-section {
+  position: fixed;
+  top: 50%;
+  right: -39px;
+  transform: rotate(270deg);
+}
+
+.contact-section button {
+  font-size: large;
+}
+
+.contact-content {
+  position: fixed;
+  top: 50%;
+  right: -120px; /* Adjust this value as needed */
+  transform: rotate(270deg);
+  display: none;
+  background-color: #fff; /* Add your desired background color */
+  padding: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  z-index: 999;
+}
+
+/* Add your styles here */
