--- a/css/index.css
+++ b/css/index.css
@@ -661,10 +661,9 @@ body {
   position: fixed;
   top: -90%;
   right: 30px;
-  /* left: 200px; */
-  
-  transform: translate(0%, -50%) rotate(90deg); /* Update transform property */
-  background-color: #fff; /* Add your desired background color */
+  border-radius: 5px;
+  transform: translate(0%, -50%) rotate(90deg); /* rotate*/
+  background-color: #fff; 
   padding: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   z-index: 999;
@@ -678,8 +677,6 @@ body {
 .contact-options a {
   margin-bottom: 10px;
   text-decoration: none;
-  color: #333; /* Add your desired text color */
-  font-size: 20px; /* Add your desired font size */
+  color: #333; 
+  font-size: 20px; 
 }
-
-/* Add your styles here */
