--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 15px;
+    background-color: #010409;
 }
 
 .headerName {
@@ -34,6 +35,9 @@ body {
     text-decoration: none;
     font-size: 1.5em;
     color: #fff;
+}
+.social-links a:hover{
+  font-size: 2em;
 }
 
 .recuriter-link,
@@ -69,6 +73,7 @@ body {
     align-items: flex-start;
     padding: 20px;
     height: 80vh;
+    background: linear-gradient(#010409,#29353a);
 }
 
 .left {
@@ -523,17 +528,21 @@ body {
   .walkthrough .screens .screen.active .media.comm .status-badge {
     transition-delay: 1.6s;
   }
-  #github-repos {
-    margin: 5vh 2vh;
-    height: 90vh;
-    border: 1px solid #ddd;
+
+
+
+#github-repos {
+    /* margin: 5vh 2vh; */
+    height: 100vh;
+    /* border: 1px solid #ddd; */
+    background: linear-gradient(#29353a,#010409 );
     text-align: center;
     position: relative;
 }
 
 .carousel-container {
     display: flex;
-    background-color: #010409;
+    /* background: linear-gradient(#29353a,#010409 ); */
     align-items: center;
     justify-content: center;
     height: 100%;
