--- a/css/intro.css
+++ b/css/intro.css
@@ -1,4 +1,4 @@
-/* Add your additional styling here if needed */
+
 body {
     font-family: sans-serif;
     margin: 0;
@@ -12,13 +12,8 @@ body {
     line-height: 1.6;
 }
 
-h2 {
-    /* color: #2c3e50; */
-}
 
-p {
-    /* color: #34495e; */
-}
+
 
 strong {
     font-weight: bold;
@@ -26,9 +21,8 @@ strong {
 }
 
 .highlight {
-    background-color: #191818; /* Highlight color */
+    background-color: #191818; 
     padding: 2px;
     border-radius: 2px;
 }
 
-/* Add any other styles you'd like */
