--- a/css/tech-stack.css
+++ b/css/tech-stack.css
@@ -8,7 +8,7 @@
 
 .tech-category {
     width: 150px; /* Adjust the width as needed */
-    background-color: #1c1b23;
+    background-color: #0C2D57;
     margin: 10px; /* Adjust the margin as needed */
     padding: 15px;
     border-radius: 10px;
