--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@ link[rel="icon"] {
 body {
     margin: 0;
     font-family: 'Consolas', monospace;
-    background-color: #29353a;
+    background-color: #0C2D57;
     color: #a7f3d0;
     height: 100%;
 }
@@ -39,10 +39,17 @@ body {
 .social-links a:hover{
   font-size: 2em;
 }
+.social-links a:nth-child(7) {
+  font-size: 1.5em;
+}
+.social-links a:nth-child(8) {
+  font-size: 1.5em;
+}
+
 
 .recuriter-link,
 .resume-link {
-    background-color: #4af8ff;
+    background-color: #FC6736;
     border-radius: 15px 0 15px 0;
     border: none;
     color: #27272a;
@@ -56,7 +63,35 @@ body {
 }
 
 .resume-link:hover, .recuriter-link:hover {
-    background-color: #47d8dd;
+    background-color: #FC6736;
+}
+
+.bi-github:hover{
+  color: #FFB0B0;
+}
+.bi-file-earmark-text:hover{
+  color: #ba9607;
+}
+
+.bi-twitter:hover{
+  color: #4bbfe9;
+}
+
+.bi-instagram:hover {
+  background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+  -webkit-background-clip: text;
+  color: transparent;
+  background-clip: text;
+}
+
+.bi-linkedin:hover{
+  color: #4292e2; 
+}
+.bi-envelope:hover{
+  background: linear-gradient( Red 55%, white 50%);
+  -webkit-background-clip: text;
+  color: transparent;
+  background-clip: text;
 }
 
 .material-symbols-outlined {
@@ -73,7 +108,7 @@ body {
     align-items: flex-start;
     padding: 20px;
     height: 80vh;
-    background: linear-gradient(#010409,#29353a);
+    background: linear-gradient(#010409,#0C2D57);
 }
 
 .left {
@@ -164,12 +199,10 @@ body {
 }
 
 .profile-image img:hover {
-    transform: perspective(1500px) rotateY(45deg) scale(1.1);
+    transform: perspective(1500px) rotateY(30deg) scale(1.1);
 }
 
-.profile-image img:active {
-    transform: perspective(1500px) rotateY(360deg) scale(1);
-}
+
 
 .name {
     color: #e4e4e7;
@@ -533,14 +566,14 @@ body {
     /* margin: 5vh 2vh; */
     height: 100vh;
     /* border: 1px solid #ddd; */
-    background: linear-gradient(#29353a,#010409 );
+    background: linear-gradient(#0C2D57,#010409 );
     text-align: center;
     position: relative;
 }
 
 .carousel-container {
     display: flex;
-    /* background: linear-gradient(#29353a,#010409 ); */
+    /* background: linear-gradient(#0C2D57,#010409 ); */
     align-items: center;
     justify-content: center;
     height: 100%;
@@ -583,13 +616,17 @@ body {
 
 #prevBtn,
 #nextBtn {
-    background-color: #4caf50;
+    background-color: #FC6736;
     color: white;
     border: none;
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
     border-radius: 4px;
+}
+
+#prevBtn:hover, #nextBtn:hover{
+  background-color: #fa6330d4;
 }
 
 .carousel-container .heading {
@@ -665,14 +702,15 @@ body {
   padding: 8px 15px;
   border: none;
   border-radius: 15px 15px 0 0;
-  background-color: #4a90e2; /* Adjust the background color as needed */
+  background-color: #FC6736; /* Adjust the background color as needed */
   color: #fff; /* Text color */
   cursor: pointer;
   transition: background-color 0.5s ease; /* Transition for background color */
 }
 
 .contact-section button:hover {
-  background-color: #357ebd; /* Adjust the hover background color */
+  background-color: #FFB0B0; /* Adjust the hover background color */
+  font-size: 30px;
 }
 
 .contact-section:hover .contact-content {
